Adapted to latest release